fix display scrollbar in a modal window

--- a/src/components/search-modal/search-modal.scss
+++ b/src/components/search-modal/search-modal.scss
@@ -103,6 +103,7 @@
 
         @media screen and (max-width: $breakpoint-sm) {
           grid-template-columns: 1fr 1fr;
+          max-height: calc(100vh - 264px);
         }
       }
     }
